part1/exer1.13/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-v0-7-svc
spec:
  type: ClusterIP
  selector:
    app: project-v0-7
  ports:
    - protocol: TCP
      port: 2353
      targetPort: 8080
